# support-system-api

./: .gitignore  README.md  lambda_entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml
app/: config.py  main.py
app/dependencies/: auth.py  db.py  get_user.py
app/enums/: enums.py
app/models/: comment.py  ticket.py  user.py
app/routes/: comments.py  tickets.py  users.py
app/schemas/: comment.py  ticket.py  user.py
app/services/: cognito_service.py  comment_service.py  ticket_service.py  user_service.py
common/: config.py  db.py  logger.py
common/models/: comment.py  ticket.py  user.py
db/models/: comment.py  ticket.py  user.py
docker/: api.Dockerfile  worker.Dockerfile
tests/: conftest.py
tests/routes/: test_tickets.py  test_users.py
worker/: lambda_handler.py  worker_lambda.py  worker_service.py
