[project]
name = "app"
version = "0.1.0"
description = "support tickets system"
license = "MIT"
readme = "README.md"

authors = [
    {name = "Glenda L",email = "lccbrokha@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "boto3 (==1.39.11)",
    "python-jose (>=3.5.0,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aioboto3 (==15.1.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
moto = {extras = ["s3"], version = "^5.1.10"}
